# vo-dml

./: .gitignore  .gitmodules  404.html  AGENTS.md  IVOA-v1.0.vo-dml.xsd  README.md  README.txt  Sample.vo-dml.xsd  VodmlTools.aux  VodmlTools.out  VodmlTools.toc  build.gradle.kts  index.html  jpatest.vo-dml.xsd  lifecycleTest.vo-dml.xsd  like_coords.vo-dml.xsd  serializationExample.vo-dml.xsd  settings.gradle.kts  tmp.json
Binding/: index.html
Commands/: index.html
Documentation/: index.html
Installation/: index.html
JavaCodeGeneration/: index.html
PythonCodeGeneration/: index.html
QuickStart/: index.html
Serialization/: index.html
Transformers/: index.html
VO-DML/: index.html
doc/: DataModel-v1.0.xsd  Readme.md  VO-DML-PR-v1.0-20170925.docx  VO-DML-PR-v1.0-20180406.docx  VO-DML-PR-v1.0.docx  VO-DML.tex  VODML-stdrec.xml  ivoa-vodmrec.xml  mkdocs.yml
search/: search_index.json
templates/: Template_AltovaUModel_2016r2sp1.ump  Template_AltovaUModel_UML2.0.xmi  Template_AltovaUModel_UML2.2.xmi  Template_AltovaUModel_UML2.4.1.xmi  Template_MD_CE_12.1.xml  Template_MD_CE_17.0.5.xml  vo-dml.properties
tools/: ChangeLog.md  Developing.md  JavaCodeGeneration.md  PROXY.txt  PythonCodeGeneration.md  README.txt  ReadMe.md  (+13 more)
tools/pythontooling/: README.md  out.xml  pyproject.toml  setup.py  tmpcat.xml
tools/pythontooling/src/vodmltools/: __main__.py  cli.py  context.py  schematron.py  vodml.py
tools/pythontooling/src/vodmltools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/pythontooling/tests/: test_cli.py  test_context.py
(+347 files in other folders)
